<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBlue"
    tools:context=".sub_module">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="50dp"
        app:iss_auto_cycle="true"
        app:iss_corner_radius="20"
        app:iss_delay="0"
        app:iss_error_image="@color/teal_200"
        app:iss_period="3000"
        app:iss_placeholder="@color/black" />

    <ImageView
        android:layout_width="239dp"
        android:layout_height="59dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="272dp"
        android:elevation="1dp"
        android:src="@drawable/text" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/style_round_corner"
        android:contentDescription="@string/background_for_ocr_pdf_doc" />

    <ImageView
        android:id="@+id/img_ocr"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/img_ocr"
        android:contentDescription="@string/ocr" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/style_round_corner"
        android:contentDescription="@string/background_for_listview" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="350dp" />

</RelativeLayout>